test/conformance/chainsaw/mutating-admission-policy-reports-v1/background/mutating-admission-policy-exclude/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicy
metadata:
  name: add-label-to-configmap-2
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:     [""]
      apiVersions:   ["v1"]
      operations:    ["CREATE"]
      resources:     ["configmaps"]
  failurePolicy: Fail
  reinvocationPolicy: Never
  mutations:
    - patchType: "ApplyConfiguration"
      applyConfiguration:
        expression: >
          object.metadata.?labels["lfx-mentorship"].hasValue() ? 
              Object{} :
              Object{ metadata: Object.metadata{ labels: {"lfx-mentorship": "kyverno"}}}
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicyBinding
metadata:
  name: add-label-to-configmap-binding-2
spec:
  policyName: add-label-to-configmap-2
